Form spacing fix

--- a/cube/css/cube.less
+++ b/cube/css/cube.less
@@ -173,6 +173,9 @@ header {
     }
 
     > form {
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
         input, select {
             -webkit-appearance: none;
@@ -182,7 +185,6 @@ header {
             height: 3rem;
             margin: 0;
             padding: 0;
-            vertical-align: top;
             border: solid #d0d0d0 1px;
             background-color: #fff;
             color: #777;
